# AntiStrike7.0

./: .gitignore  README.md  pyproject.toml  requirements.txt  start.sh
antistrike/: __init__.py  __main__.py
antistrike/agents/: coordinator.py
antistrike/cli/: main.py
antistrike/cli/tui/: app.py
antistrike/core/: authorization.py  config.py  engine.py  theme.py
antistrike/mcp/: bridge.py
antistrike/modules/attacks/: orchestrator.py  scanner.py
antistrike/modules/report/: generator.py
antistrike/payloads/: library.py
antistrike/server/: app.py
antistrike/server/routes/: agents.py  attacks.py  auth.py  system.py  tools.py
antistrike/skills/scan_modes/: exhaustive.md
antistrike/skills/vulnerabilities/: graphql.md  llm_injection.md  sqli.md  ssrf.md
antistrike/tools/: registry.py
antistrike/web/dashboard/: app.js  index.html  styles.css
assets/: gallery.html  stats.json
config/: antistrike-mcp.json  antistrike.json
docs/: index.html
scripts/: generate_charts.py
