[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antistrike"
version = "7.0.0"
description = "Antistrike 7.0 — Advanced AI-powered penetration testing platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Antistrike Team" }]
keywords = ["pentest", "security", "mcp", "ai", "vulnerability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "fastmcp>=2.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
    "rich>=13.9.0",
    "textual>=1.0.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "python-multipart>=0.0.12",
    "websockets>=13.0",
    "psutil>=6.1.0",
    "cvss>=3.1",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
browser = ["selenium>=4.26.0", "webdriver-manager>=4.0.0"]
dev = ["pytest>=8.3.0", "ruff>=0.8.0", "mypy>=1.13.0"]

[project.scripts]
antistrike = "antistrike.cli.main:main"
antistrike-server = "antistrike.server.app:run_server"
antistrike-mcp = "antistrike.mcp.bridge:main"

[tool.hatch.build.targets.wheel]
packages = ["antistrike"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]